# For_SibPLC

./: .gitignore  Cover_angle_brackets.py  delete_empty_folder.py  new_folder_r3.py
test_new_folder_order_v1/: new_folder_r4.py
test_new_folder_order_v2/: new_folder_order_v2.py
test_new_folder_order_v2/2024/: .env  db_config.py  new_folder_order_v2.py
test_new_folder_order_v2/2024/create_new_folder/: create_folder.bat  create_folder.ps1  new_folder_order_v2.py
test_new_folder_order_v2r1/: pyproject.toml
test_new_folder_order_v2r3/: pyproject.toml
test_new_folder_order_v2r3/2024/create_new_folder/: create_folders.spec  db_config.py  new_folder_order_v2.py  new_folder_order_v2.spec  КП.xls
test_new_folder_order_v3r1/: pyproject.toml
test_new_folder_order_v3r1/create_new_folder/: create_folder.bat
test_new_folder_order_v3r2/create_new_folder/: create_folder.bat  main.py  pyproject.toml
