[tool.poetry]
name = "test-new-folder-order-v2r3"
version = "0.1.0"
description = ""
authors = ["Maksim <voronovmaksim88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
mysql-connector-python = "^9.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
